crates/ktsense-cli/tests/snapshots/context__a_budget_that_fits_only_the_declaration_says_what_it_dropped.snap
---
source: crates/ktsense-cli/tests/context.rs
expression: record(&run)
---
exit 0
stderr empty
---
# Context: shop.order.OrderRepository.save

index: complete
Budget 9 tokens, content bound 9. 8 items omitted for budget.

## Declaration

core/src/main/kotlin/shop/order/OrderRepository.kt:4

```kotlin
fun save(order: Order): OrderId
```

## Source

2 more lines omitted; read core/src/main/kotlin/shop/order/OrderRepository.kt:4-5

## File outline: core/src/main/kotlin/shop/order/OrderRepository.kt

Omitted for budget: 1 declaration.

## Callers (3)
- ... 3 omitted for budget

## Implementors (2)
- ... 2 omitted for budget

Callers are the declarations enclosing each reference site; the engine reports no call hierarchy. Resolution is syntactic, not type-checked. The content bound covers the declaration, its source, the outline, and the caller and implementor lines the budget gated, not the headings around them.
