crates/ktsense-cli/tests/snapshots/context__a_generous_budget_carries_the_declaration_its_file_outline_callers_and_implementors.snap
---
source: crates/ktsense-cli/tests/context.rs
expression: record(&run)
---
exit 0
stderr empty
---
# Context: shop.order.OrderRepository.save

index: complete
Budget 2000 tokens, content bound 188. 0 items omitted for budget.

## Declaration

core/src/main/kotlin/shop/order/OrderRepository.kt:4

```kotlin
fun save(order: Order): OrderId
```

## Source

```kotlin
    fun save(order: Order): OrderId

```

## File outline: core/src/main/kotlin/shop/order/OrderRepository.kt

```kotlin
interface OrderRepository {
    fun save(order: Order): OrderId
    fun findById(id: OrderId): Order?
}
```

## Callers (3)
- shop.app.checkout.CheckoutService.placeOrder  app/src/main/kotlin/shop/app/checkout/CheckoutService.kt:12
- shop.app.checkout.OrderImporter.importAll  app/src/main/kotlin/shop/app/checkout/OrderImporter.kt:8
- shop.app.reporting.ReportBackfill.rebuild  app/src/main/kotlin/shop/app/reporting/ReportBackfill.kt:9

## Implementors (2)
- shop.db.InMemoryOrderRepository.save  db/src/main/kotlin/shop/db/InMemoryOrderRepository.kt:13
- shop.db.JdbcOrderRepository.save  db/src/main/kotlin/shop/db/JdbcOrderRepository.kt:8

Callers are the declarations enclosing each reference site; the engine reports no call hierarchy. Resolution is syntactic, not type-checked. The content bound covers the declaration, its source, the outline, and the caller and implementor lines the budget gated, not the headings around them.
