crates/ktsense-cli/tests/snapshots/context__dot_is_refused_because_only_deps_produces_a_graph.snap
---
source: crates/ktsense-cli/tests/context.rs
expression: record(&run)
---
exit 1
stderr ktsense: context does not support --format dot (only deps does)
---
