crates/ktsense-cli/tests/snapshots/context__json_carries_the_same_bundle_with_the_budget_bound_and_index_marker_as_data.snap
---
source: crates/ktsense-cli/tests/context.rs
expression: record(&run)
---
exit 0
stderr empty
---
{
  "symbol": "shop.order.OrderRepository.save",
  "index": "complete",
  "definition": {
    "qualified_name": "shop.order.OrderRepository.save",
    "path": "core/src/main/kotlin/shop/order/OrderRepository.kt",
    "line": 4,
    "signature": "fun save(order: Order): OrderId"
  },
  "declaration": {
    "items": [
      "fun save(order: Order): OrderId"
    ],
    "omitted": 0
  },
  "source": {
    "lines": [
      "    fun save(order: Order): OrderId",
      ""
    ],
    "start_line": 4,
    "end_line": 5,
    "omitted_lines": 0
  },
  "file_outline": {
    "items": [
      "interface OrderRepository {\n    fun save(order: Order): OrderId\n    fun findById(id: OrderId): Order?\n}"
    ],
    "omitted": 0
  },
  "callers": {
    "items": [
      {
        "path": "app/src/main/kotlin/shop/app/checkout/CheckoutService.kt",
        "line": 12,
        "qualified_name": "shop.app.checkout.CheckoutService.placeOrder",
        "kind": "function",
        "sites": 1,
        "test": false
      },
      {
        "path": "app/src/main/kotlin/shop/app/checkout/OrderImporter.kt",
        "line": 8,
        "qualified_name": "shop.app.checkout.OrderImporter.importAll",
        "kind": "function",
        "sites": 1,
        "test": false
      },
      {
        "path": "app/src/main/kotlin/shop/app/reporting/ReportBackfill.kt",
        "line": 9,
        "qualified_name": "shop.app.reporting.ReportBackfill.rebuild",
        "kind": "function",
        "sites": 1,
        "test": false
      }
    ],
    "omitted": 0
  },
  "implementors": {
    "items": [
      {
        "path": "db/src/main/kotlin/shop/db/InMemoryOrderRepository.kt",
        "line": 13,
        "qualified_name": "shop.db.InMemoryOrderRepository.save",
        "kind": "function",
        "sites": 1,
        "test": false
      },
      {
        "path": "db/src/main/kotlin/shop/db/JdbcOrderRepository.kt",
        "line": 8,
        "qualified_name": "shop.db.JdbcOrderRepository.save",
        "kind": "function",
        "sites": 1,
        "test": false
      }
    ],
    "omitted": 0
  },
  "budget": 2000,
  "token_upper_bound": 188
}
